--- a/assets/styles.css
+++ b/assets/styles.css
@@ -5,7 +5,7 @@
 }
 
 header {
-    padding: 1.5em;
+    padding: 1.5em 3em;
     background-color: rgba(0, 0, 0, 0.801);
 }
 
@@ -37,14 +37,14 @@ main {
 
 main section:first-child {
     margin: 0;
-    padding: 3em 0 3em 0;
+    padding: 3em 0;
 }
 
 main section:first-child div.container {
     margin: 0 3em 3em 3em;
     padding: 1em;
     border: 2px solid rgba(0, 0, 0, 0.801);
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.801);
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.801);
     border-radius: 5px;
     background-color: #f6f6f6;
 }
@@ -65,15 +65,21 @@ main section p {
 main section:first-child form {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     gap: 1em;
 }
 
+main section:first-child form div {
+    width: 100%;
+}
+
 main section:first-child form input {
-    margin: 1em;
+    margin-top: 1em;
     padding: 1em;
     width: 80%;
     border: 2px solid rgba(0, 0, 0, 0.801);
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.801);
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.801);
     border-radius: 2px;
     font-size: 16px;
 }
@@ -83,12 +89,27 @@ main section:first-child form input:hover {
     transition-duration: 300ms;
 }
 
-main section:first-child form select {
-    margin: 1em;
+main section:first-child form textarea {
+    margin-top: 1em;
     padding: 1em;
     width: 80%;
     border: 2px solid rgba(0, 0, 0, 0.801);
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.801);
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.801);
+    border-radius: 2px;
+    font-size: 16px;
+}
+
+main section:first-child form textarea:hover {
+    border-color: rgb(248, 169, 22);
+    transition-duration: 300ms;
+}
+
+main section:first-child form select {
+    margin-top: 1em;
+    padding: 1em;
+    width: 80%;
+    border: 2px solid rgba(0, 0, 0, 0.801);
+    box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.801);
     border-radius: 2px;
     font-size: 16px;
 }
@@ -96,14 +117,6 @@ main section:first-child form select {
 main section:first-child form select:hover {
     border-color: rgb(248, 169, 22);
     transition-duration: 300ms;
-}
-
-#ingredient {
-    height: 100px;
-}
-
-#instructions {
-    height: 100px;
 }
 
 main section:first-child form label {
@@ -131,13 +144,17 @@ main section:first-child form button:hover {
     transition-duration: 300ms;
 }
 
+main section:last-child {
+    padding: 0 2em 3em 2em;
+}
+
 main section:last-child h2 {
     text-align: center;
 }
 
 main section:last-child article {
     margin: 1em;
-    padding: 1em;
+    padding: 2em;
     border: 2px solid rgba(0, 0, 0, 0.801);
     border-radius: 2px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.801);
@@ -146,7 +163,9 @@ main section:last-child article {
 
 main section:last-child article div.articletop {
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     padding: 1em;
     border-bottom: 1px solid rgba(0, 0, 0, 0.801);
 }
@@ -163,6 +182,7 @@ main section:last-child article div.articletop span {
 }
 
 main section:last-child article div.articletop div.button {
+   margin-top: 1em;
     display: flex;
     align-items: center;
     gap: 1em;
@@ -179,8 +199,8 @@ main section:last-child article div.articletop button {
     font-weight: 500;
 }
 
-main section:last-child article div.articletop button:hover{
-    border:3px solid rgb(248, 169, 22);
+main section:last-child article div.articletop button:hover {
+    border: 3px solid rgb(248, 169, 22);
     cursor: pointer;
     transition-duration: 300ms;
 }
@@ -190,6 +210,8 @@ main section:last-child article div.articletop button:hover{
     main section:first-child form div {
         display: flex;
         flex-direction: row;
+        justify-content: center;
+        align-content: center;
     }
 
     main section:first-child form input {
@@ -200,9 +222,19 @@ main section:last-child article div.articletop button:hover{
         width: 50%;
     }
 
+    main section:first-child form textarea {
+        width: 50%;
+    }
+
     main section:first-child form label {
         display: flex;
         align-items: center;
         justify-content: center;
+        margin-right: 1em;
+    }
+
+    main section:last-child article div.articletop {
+    flex-direction: row;
+    justify-content: space-between;
     }
 }
